style: button hover state, bike path link underlines, spacing fixes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -101,6 +101,17 @@ button.action-button {
   cursor: pointer;
   font-size: 1em;
   background: none;
+  margin-top: 0.5rem;
+
+  &:hover {
+    background-color: $color-card-hover;
+  }
+
+  @include dark-mode {
+    &:hover {
+      background-color: $color-card-hover-dark;
+    }
+  }
 }
 
 a.go-back-button {
@@ -1180,6 +1191,10 @@ body.fullbleed {
   font-size: 0.9em;
   color: $color-text-muted;
   @include dark-mode { color: $color-text-muted-dark; }
+
+  a {
+    @include sidebar-link;
+  }
 }
 
 // Reactions widget
